; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-realview/extr_core.c_timer_set_mode.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-realview/extr_core.c_timer_set_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clock_event_device = type { i32 }

@TIMER_RELOAD = common dso_local global i64 0, align 8
@timer0_va_base = common dso_local global i64 0, align 8
@TIMER_LOAD = common dso_local global i64 0, align 8
@TIMER_CTRL_PERIODIC = common dso_local global i64 0, align 8
@TIMER_CTRL_32BIT = common dso_local global i64 0, align 8
@TIMER_CTRL_IE = common dso_local global i64 0, align 8
@TIMER_CTRL_ENABLE = common dso_local global i64 0, align 8
@TIMER_CTRL_ONESHOT = common dso_local global i64 0, align 8
@TIMER_CTRL = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, %struct.clock_event_device*)* @timer_set_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @timer_set_mode(i32 %0, %struct.clock_event_device* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.clock_event_device*, align 8
  %5 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  store %struct.clock_event_device* %1, %struct.clock_event_device** %4, align 8
  %6 = load i32, i32* %3, align 4
  switch i32 %6, label %29 [
    i32 130, label %7
    i32 131, label %21
    i32 128, label %28
    i32 129, label %28
  ]

7:                                                ; preds = %2
  %8 = load i64, i64* @TIMER_RELOAD, align 8
  %9 = load i64, i64* @timer0_va_base, align 8
  %10 = load i64, i64* @TIMER_LOAD, align 8
  %11 = add nsw i64 %9, %10
  %12 = call i32 @writel(i64 %8, i64 %11)
  %13 = load i64, i64* @TIMER_CTRL_PERIODIC, align 8
  store i64 %13, i64* %5, align 8
  %14 = load i64, i64* @TIMER_CTRL_32BIT, align 8
  %15 = load i64, i64* @TIMER_CTRL_IE, align 8
  %16 = or i64 %14, %15
  %17 = load i64, i64* @TIMER_CTRL_ENABLE, align 8
  %18 = or i64 %16, %17
  %19 = load i64, i64* %5, align 8
  %20 = or i64 %19, %18
  store i64 %20, i64* %5, align 8
  br label %30

21:                                               ; preds = %2
  %22 = load i64, i64* @TIMER_CTRL_ONESHOT, align 8
  store i64 %22, i64* %5, align 8
  %23 = load i64, i64* @TIMER_CTRL_32BIT, align 8
  %24 = load i64, i64* @TIMER_CTRL_IE, align 8
  %25 = or i64 %23, %24
  %26 = load i64, i64* %5, align 8
  %27 = or i64 %26, %25
  store i64 %27, i64* %5, align 8
  br label %30

28:                                               ; preds = %2, %2
  br label %29

29:                                               ; preds = %2, %28
  store i64 0, i64* %5, align 8
  br label %30

30:                                               ; preds = %29, %21, %7
  %31 = load i64, i64* %5, align 8
  %32 = load i64, i64* @timer0_va_base, align 8
  %33 = load i64, i64* @TIMER_CTRL, align 8
  %34 = add nsw i64 %32, %33
  %35 = call i32 @writel(i64 %31, i64 %34)
  ret void
}

declare dso_local i32 @writel(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
